# clips_pddl_parser

./: CMakeLists.txt  clips_pddl_parser.pc.in  clips_pddl_parser.spec.rpkg
cmake/: ClipsPddlParserConfig.cmake
include/clips_pddl_parser/: clips_pddl_parser.h  effect_visitor.h  precondition_visitor.h
src/: clips_pddl_parser.cpp  domain.clp  effect_visitor.cpp  precondition_visitor.cpp
